--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/order_service?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.register-with-eureka=true
+spring.application.name=order-service-ms
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port=0
+
+server.error.include-stacktrace=never
+
+
 
